[tool.poetry]
name = "wolframsiri"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wolframalpha = "^4.0.0"
flask = "^1.1.2"
gevent = "^20.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
